<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/beige"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".ConfigurationActivity">

    <TextView
        android:id="@+id/title_configuration"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:text="@string/configuracion"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/icono_smart_saw"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/descripcion_icono_smart_saw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circular_saw_tool_color_icon" />

    <com.example.aplicaciontest.NumberField
        android:id="@+id/campo_velocidad_motor"
        android:layout_width="360dp"
        android:layout_height="85dp"
        android:layout_marginTop="85dp"
        app:labelText="@string/velocidad_del_motor"
        app:layout_constraintTop_toTopOf="@+id/title_configuration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.example.aplicaciontest.NumberField
        android:id="@+id/campo_limite_vertical"
        android:layout_width="360dp"
        android:layout_height="85dp"
        android:layout_marginTop="115dp"
        app:labelText="@string/limite_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/campo_velocidad_motor" />

    <com.example.aplicaciontest.NumberField
        android:id="@+id/campo_limite_horizontal_izquierdo"
        android:layout_width="360dp"
        android:layout_height="85dp"
        android:layout_marginTop="115dp"
        app:labelText="@string/limite_horizontal_izquierdo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/campo_limite_vertical" />

    <com.example.aplicaciontest.NumberField
        android:id="@+id/campo_limite_horizontal_derecho"
        android:layout_width="360dp"
        android:layout_height="85dp"
        android:layout_marginTop="115dp"
        app:labelText="@string/limite_horizontal_derecho"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/campo_limite_horizontal_izquierdo" />

    <com.example.aplicaciontest.NumberField
        android:id="@+id/campo_margen_de_error"
        android:layout_width="360dp"
        android:layout_height="85dp"
        android:layout_marginTop="115dp"
        app:labelText="@string/margen_de_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/campo_limite_horizontal_derecho" />

    <com.example.aplicaciontest.BotonSmartSaw
        android:id="@+id/btn_guardar_configuracion"
        android:layout_width="138dp"
        android:layout_height="51dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.978">
    </com.example.aplicaciontest.BotonSmartSaw>

</androidx.constraintlayout.widget.ConstraintLayout>
